# kame

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile.win  dep.txt  kame-lua-dev-1.rockspec  main.cpp
bindings/lua/: kame-lua.cpp
bindings/python/: kame-py.cpp  kame_py.cpp
bindings/python/gltf/: gltf_py.hpp
bindings/python/math/: matrix_py.hpp  vector3_py.hpp  vector4_py.hpp
bindings/python/ogl/: ogl_py.hpp
bindings/python/sdl/: sdl_py.hpp
bindings/python/squirtle/: squirtle_py.hpp
examples/: CMakeLists.txt
examples/00-helloworld/: helloworld.cpp
examples/01-triangle/: triangle.cpp
examples/02-image/: image.cpp
examples/03-assimp/: assimp.cpp
examples/04-gltf/: gltf.cpp
examples/05-bunnymark/: bunnymark.cpp
examples/data/: bunny.gltf  bunny.h  bunny_diffuse.h  torus.gltf  torus.h
include/kame/: kame.hpp
include/kame/assimp/: assimp.hpp
include/kame/gltf/: gltf.hpp  gltf_ext.hpp  gltf_ext_mesh_gpu_instancing.hpp  gltf_material.hpp
include/kame/love2d/: graphics.hpp  keyboard.hpp  love2d.hpp  mouse.hpp  physics.hpp  timer.hpp  types.hpp
include/kame/love2d/detail/: box2d.hpp  box2d_header.hpp  context.hpp  graphics.hpp  physics.hpp  renderer.hpp
include/kame/lua/: lua.hpp
include/kame/math/: helper.hpp  math.hpp  matrix.hpp  matrix4x4.hpp  matrix4x4f.hpp  quaternion.hpp  quaternionf.hpp  vector2.hpp  vector2f.hpp  vector3.hpp  vector3f.hpp  vector4.hpp  vector4f.hpp
include/kame/math/hlsl/: hlsl.hpp
include/kame/ogl/: glad.hpp  glad_header.hpp  ogl.hpp
include/kame/ogl21/: glad.hpp  ogl21.hpp
include/kame/sdl/: sdl.hpp  sdl_header.hpp
include/kame/sdl2/: sdl2.hpp
include/kame/squirtle/: animation.hpp  camera.hpp  engine.hpp  instance.hpp  material.hpp  model.hpp  squirtle.hpp
include/kame/squirtle/node/: camera_node.hpp  gltf_node.hpp  helper.hpp  light_node.hpp  mesh_node.hpp  node.hpp
include/kame/vk/: etna.hpp  vk.hpp  vk_header.hpp
include/kame/vk/etna/: etna.hpp
src/: all.hpp  kame.cpp  std.hpp  thirdparty.hpp
src/assimp/: assimp.cpp
src/gltf/: gltf.cpp  gltf_ext.cpp  gltf_material.cpp
src/love2d/: graphics.cpp  keyboard.cpp  love2d.cpp  mouse.cpp  physics.cpp  timer.cpp
src/love2d/detail/: box2d.cpp  context.cpp  graphics.cpp  physics.cpp  physics_debug_draw.cpp  renderer.cpp
src/lua/: lua.cpp  vector3.cpp
src/lua/love2d/: love2d.hpp
src/lua/math/: matrix.hpp  vector3.hpp  vector4.hpp
src/math/: matrix4x4.cpp  matrix4x4f.cpp  quaternionf.cpp  vector3.cpp  vector3f.cpp  vector4.cpp  vector4f.cpp
src/ogl/: glad.cpp  ogl.cpp
src/ogl21/: glad.cpp  ogl21.cpp
src/sdl/: sdl.cpp  sdl_ogl.cpp  sdl_vk.cpp
src/sdl2/: sdl2.cpp
src/squirtle/: animation.cpp  camera.cpp  engine.cpp  instance.cpp  material.cpp  model.cpp  squirtle.cpp
src/squirtle/editor/: editor.cpp
src/squirtle/node/: gltf_node.cpp  helper.cpp
src/squirtle/shaders/: pixel.glsl  shadow-pixel.glsl  shadow-vertex.glsl  vertex.glsl
src/vk/: vk.cpp  volk.cpp
test/: test.cpp
tool/: CMakeLists.txt
tool/common/: common.hpp
tool/modelview/: main.cpp
tool/uvview/: main.cpp
tools/: CMakeLists.txt
tools/common/: common.hpp
tools/matc/: CMakeLists.txt  main.cpp
tools/modelview/: CMakeLists.txt  main.cpp
tools/uvview/: CMakeLists.txt  main.cpp
